--- a/index.html
+++ b/index.html
@@ -1,1 +1,63 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>SESHADHRI SV</h1>
+        <p>Full Stack Developer</p>
+        <nav>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#certifications">Certifications</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Hello! I'm a full-stack developer having skills in HTML, CSS, JavaScript, and React. I enjoy creating dynamic, interactive websites and applications.</p>
+    </section>
+
+    <section id="skills">
+        <h2>Skills</h2>
+        <div id="skillsChartContainer">
+            <canvas id="skillsChart" width="400" height="400"></canvas>
+        </div>
+        
+        <div class="button-container">
+            <button onclick="filterSkills('high')">Show High Skills</button>
+            <button onclick="filterSkills('low')">Show Low Skills</button>
+            <button onclick="resetSkills()">Show All Skills</button>
+        </div>
+    </section>
+
+    <section id="Certifications">
+        <h2>Certifications</h2>
+        <ul>
+            <li><strong>FULL STACK WEB DEVELOPMENT</strong>: Currently focusing on full-stack development using Java</li>
+            <li><strong>SAP - ABAP</strong>:SAP Certified Development Associate - ABAP with SAP NetWeaver 7.50</li>
+            <li><strong>AMAZON WEB SERVICES</strong>:Certified AWS Cloud Developer</li>
+        </ul>
+    </section>
+
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Email: barathradha8296@gmail.com</p>
+        <p>Mob No: 7904208328</p>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 SESHADHRI SV</p>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="script.js"></script>
+</body>
+</html>
